Fix alignment for large displays

--- a/client/src/components/reviews.module.scss
+++ b/client/src/components/reviews.module.scss
@@ -42,6 +42,7 @@
     align-items: center;
     padding: 1rem 0;    
     flex-direction: column;
+    justify-content: center;
 
     @include lg {
       flex-direction: row;
